# suby

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: lint.yml  tests_and_coverage.yml  tests_and_coverage_old.yml
suby/: __init__.py  callbacks.py  errors.py  proxy_module.py  subprocess_result.py
tests/: test_callbacks.py  test_errors.py  test_proxy_module.py  test_subprocess_result.py
