[build-system]
requires = ["setuptools==68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suby"
version = "0.0.2"
authors = [
  { name="Evgeniy Blinov", email="zheni-b@yandex.ru" },
]
description = 'Slightly simplified subprocesses'
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'emptylog>=0.0.7',
    'cantok>=0.0.18',
]
classifiers = [
    "Operating System :: OS Independent",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
]

[tool.setuptools.package-data]
"suby" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="suby"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/pomponchik/suby'
'Tracker' = 'https://github.com/pomponchik/suby/issues'
